--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /1_basic_code/.vs/1_basic_code/v16/ipch/AutoPCH/17b62d02cae50934/1_BASIC_CODE.ipch
 /.vs/peakit04/v16/.suo
 /1_basic_code/.vs/1_basic_code/v16
+/Vulkan_basic_code/.vs/1_basic_code/v16
+/Vulkan_basic_code/1_basic_code/Debug
+/Vulkan_basic_code/1_basic_code/x64/Debug
+/Vulkan_basic_code/.vs/Vulkan_basic_code/v16
