Create instance code

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /Vulkan_basic_code/1_basic_code/Debug
 /Vulkan_basic_code/1_basic_code/x64/Debug
 /Vulkan_basic_code/.vs/Vulkan_basic_code/v16
+/Vulkan_basic_code/2_create_instance/Debug
+/Vulkan_basic_code/2_create_instance/x64/Debug
