Validate layers implementation

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /Vulkan_basic_code/.vs/Vulkan_basic_code/v16
 /Vulkan_basic_code/2_create_instance/Debug
 /Vulkan_basic_code/2_create_instance/x64/Debug
+/Vulkan_basic_code/3_validate_layers/Debug
