--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@
 /Vulkan_basic_code/5_create_logical_device/x64/Debug
 /Vulkan_basic_code/4_select_physical_device/x64/Debug
 /.vs/VulkanBasicCode/v16
+/Vulkan_basic_code/16_desenare_clepsidra/Debug
